fix overflow durin Signup process (hide scrollbar)

--- a/components/auth/SignFormContainer.module.scss
+++ b/components/auth/SignFormContainer.module.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   width: 100%;
   // border: 2px solid purple;
-  background-color: #00565bb4;
+  background-color: #00565bd4;
   display: flex;
   align-items: center;
 
