--- a/components/auth/SigninForm.module.scss
+++ b/components/auth/SigninForm.module.scss
@@ -177,6 +177,7 @@
   // .formContent
   &.desktop{
     width: 416px;
+    margin-top: 122px !important;
   }
 }
 // }
